# VulkanFramework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  RDSettings.cap  README.md  VKFWConfig.xml
VKFW/: VKFWConfig.xml  app_constants.h  main.cpp
VKFW/app/: FWApplication.cpp  FWApplication.h
VKFW/gfx/: VertexFormats.cpp  VertexFormats.h
VKFW/resources/: simple.frag  simple.vert  simple_transparent.frag  simple_transparent.vert
include/vkfw/: app_constants.h
include/vkfw/app/: FWApplication.h  RaytracingScene.h  Scene.h  SimpleScene.h
include/vkfw/gfx/: AOIntegrator.h  PathIntegrator.h  PathRecursiveIntegrator.h  RTIntegrator.h  VertexFormats.h
resources/: simple.frag
resources/shader/: simple_transparent.frag
resources/shader/core/: noise3D.glsl  random.glsl  sampling.glsl  shader_interface.h
resources/shader/materials/: material_sample_host_interface.h
resources/shader/mesh/: mesh.vert  mesh_sample_host_interface.h
resources/shader/rt/: ao.rgen  camera.glsl  closesthit.rchit  frame.glsl  lights.glsl  miss.rmiss  ray.glsl  rayTraversal.glsl  ray_tracing_shader_host_interface.h  raygen.rgen  rt_sample_host_interface.h  skipAlpha.rahit  specularBounce.rchit  utils.glsl
resources/shader/rt/ao/: ao.rgen  ao_composite.frag  ao_composite_shader_interface.h  ao_host_interface.h  closesthit.rchit  closesthit_mirror.rchit  miss.rmiss
resources/shader/rt/path/: closesthit_phongbump.rchit  pathtrace.rgen
resources/shader/rt/path2/: closesthit_phongbump.rchit  path_composite_shader_interface.h  path_host_interface.h  pathtrace.rgen
src/: CMakeLists.txt
src/vkfw/: CMakeLists.txt  main.cpp
src/vkfw/app/: FWApplication.cpp  RaytracingScene.cpp  Scene.cpp  SimpleScene.cpp
src/vkfw/gfx/: AOIntegrator.cpp  Materials.cpp  Materials.h  PathIntegrator.cpp  PathRecursiveIntegrator.cpp  RTIntegrator.cpp  VertexFormats.cpp
test/: CMakeLists.txt
